assets/css/subpage.css
h1 {
  font-size: var(--s-large);
  margin-top: var(--s-xl);
  padding-inline: var(--s-small);
  text-shadow: none;
  margin-inline: auto;
  max-width: 1200px;
  text-align: center;
}

h2 {
  font-size: var(--s-medium);
}

.section-head-large {
  font-size: var(--s-medium-large);
  text-align: center;
}

.nav-active > nav > ul {
  color: white;
}

.subpage + section > .container-large {
  padding-top: 0;
}

.subpage .image-container {
  max-width: 30ch;
}

.subpage .service {
  margin-inline: auto;
  padding-block: var(--s-medium);
}

.subpage .service.block-padded {
  padding-block: var(--s-xl);
  max-width: 1100px;
}

.subpage .service {
  align-content: center;
  justify-content: center;
}

.subpage p {
  text-align: left;
}

.container-sub {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-inline: auto;
  padding-inline: var(--s-small);
}

.container-sub > .image-container {
  margin-left: var(--s-medium);
  margin-right: var(--s-large);
  margin-block: var(--s-xs);
}

.sub-image {
  max-width: 35ch;
  padding: var(--s-small);
}

@media (min-width: 800px) {
  .image-right {
    order: 2;
    margin-right: var(--s-medium);
  }

  .container-sub {
    flex-direction: row;
    max-width: 1000px;
    padding-inline: 0;
  }
}

